<resources>
    <string name="app_name">GymAppv1.0</string>
    <string name="please_login">Please login to your account</string>
    <string name="login_user_enter_your_password">enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account?Click here</string>
    <string name="GymName">MyGym</string>
    <string name="select_method">Select Method</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jazz_cash_number">jazz cash number here</string>
    <string name="easypaisa_number">easypaisa number here</string>
</resources>